--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -14,3 +14,15 @@
     padding: 0 3rem;
   }
 }
+
+.event-container-width {
+  max-width: 109rem;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  padding: 0 0;
+
+  @media (min-width: $mobile-screen) {
+    padding: 6rem 3rem;
+  }
+}
