--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -25,4 +25,5 @@ $light-gray: #bdbdbd;
 
 $silver: #e0e0e0;
 $silver-lite: #f2f2f2;
-$white-shaded: #fbfaff;
+
+$primary-shadow: rgba(0, 0, 0, 0.1);
